<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                android:layout_weight="8"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp">


                <ImageView
                    android:id="@+id/iv_product"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/product_image" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_product_name"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_product_name"
                        android:textColor="@color/green_header"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_product_price"
                        android:textColor="#AC0707"
                        android:textSize="15sp"
                        android:textStyle="bold|italic" />


                    <LinearLayout
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/iv_star_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/star_icon"
                            app:srcCompat="@android:drawable/btn_star_big_on" />


                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sample_product_rating"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/tv_purchase_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sample_product_purchase_no"
                            android:textColor="@color/mineral_green"
                            android:textSize="12sp"
                            android:textStyle="bold|italic" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />


                <ImageButton
                    android:id="@+id/addToCart"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_button" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
