<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.food_fact.EntryActivity">


    <LinearLayout
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/vegetable" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LeRegime"
            android:textColor="#3C6255"
            android:textSize="40sp"
            android:textStyle="bold"/>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title"
        app:layout_constraintVertical_bias="0.05">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/buds" />


            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/main_paragraph1"
                android:textColor="#61876E"
                android:textStyle="bold"
                android:textSize="20sp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/buds" />


            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/main_paragraph2"
                android:textColor="#61876E"
                android:textStyle="bold"
                android:textSize="20sp"/>


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.1">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_login"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_home_main"
            android:text="@string/login"
            android:textColor="#3C6255"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_sign_up"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/button_home_main"
            android:text="@string/sign_up"
            android:textColor="#3C6255"/>


    </LinearLayout>


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facts_about_foods"
        android:textColor="#3C6255"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.16" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.1">
        <!--RecyclerView-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/FoodFactRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
